[package]
name = "Starling-Server"
version = "0.2.17"
edition = "2024"
license = "Apache-2.0"
description = "Headless roost server for Starling — persistent chat history and message relay"

[lib]
name = "starling_server"

[[bin]]
name = "starling-server"
path = "src/main.rs"

[features]
default = []
media = [
    "dep:chrono",
    "dep:cpal",
    "dep:image",
    "dep:nokhwa",
    "dep:ratatui",
    "dep:ringbuf",
    "dep:uuid",
]

[dependencies]
anyhow = "1.0.104"
chrono = { version = "0.4.45", features = ["serde"], optional = true }
cpal = { version = "0.18.1", optional = true }
image = { version = "0.25.10", optional = true }
iroh = "1.0.3"
iroh-gossip = "0.101.0"
n0-future = "0.3.2"
nokhwa = { version = "0.10.11", features = ["input-native"], optional = true }
postcard = { version = "1.1.3", features = ["use-std"] }
ratatui = { version = "0.30.2", optional = true }
ringbuf = { version = "0.5.1", optional = true }
serde = { version = "1.0.229", features = ["derive"] }
sled = "0.34"
starling = { git = "https://github.com/Saltfault/starling.git" }
tokio = { version = "1.53.1", features = ["full"] }
uuid = { version = "1.24.0", features = ["v4", "serde"], optional = true }
